# TestTaskStreamline

task1/: ItemRepository.cpp  ItemRepository.h  README.md
task1/docs/: category_representation.puml
task1/tests/: repository_tests.cpp
task1_1/: CMakeLists.txt  Item.h  utils.cpp  utils.h
task2/: CMakeLists.txt  IndexError.h  README.md  main.cpp
task2/task2_1/: stringlist.h  stringlist.inl
task2/task2_2/: stringlist2.cpp  stringlist2.h
